--- a/conf.d/main.cfg
+++ b/conf.d/main.cfg
@@ -10,3 +10,5 @@ admin_twitter_account = UNICORN_OZ
 bot_twitter_account = flodatabot
 base_url = https://retweets.floblockchain.com/
 redirect_successfull_participation = https://retweets.floblockchain.com/thank-you.html
+redirect_canceled = https://retweets.floblockchain.com/canceled.html
+let_bot_retweet = False
