--- a/conf.d/main.cfg
+++ b/conf.d/main.cfg
@@ -11,4 +11,5 @@ bot_twitter_account = flodatabot
 base_url = https://retweets.floblockchain.com/
 redirect_successfull_participation = https://retweets.floblockchain.com/thank-you.html
 redirect_canceled = https://retweets.floblockchain.com/canceled.html
-let_bot_retweet = False
+; Set to 'True' if the bot account should retweet too
+let_bot_account_retweet = False
