--- a/conf.d/main.cfg
+++ b/conf.d/main.cfg
@@ -4,12 +4,24 @@ db_file = flo_retweets_db.json
 
 [SYSTEM]
 ; if the reverse proxy is hosted on a separate system set to '0.0.0.0', if its on the localhost then use '127.0.0.1'
-api_listener = 127.0.0.1
+api_listener_ip = 127.0.0.1
+
+api_listener_port = 17613
+
 app_name = FLO Retweets Bot
-admin_twitter_account = UNICORN_OZ
+
+admin_contact_twitter_account = UNICORN_OZ
+
+; sys admins are allowed to use private commands (get-info) and are receiving status messages from the bot
+sys_admin_list = "UNICORN_OZ,JosephFiscella"
+
 bot_twitter_account = flodatabot
+
 base_url = https://retweets.floblockchain.com/
+
 redirect_successfull_participation = https://retweets.floblockchain.com/thank-you.html
+
 redirect_canceled = https://retweets.floblockchain.com/canceled.html
+
 ; Set to 'True' if the bot account should retweet too
 let_bot_account_retweet = False
