--- a/conf.d/main.cfg
+++ b/conf.d/main.cfg
@@ -12,16 +12,18 @@ app_name = FLO Retweets Bot
 
 admin_contact_twitter_account = UNICORN_OZ
 
-; sys admins are allowed to use private commands (get-info) and are receiving status messages from the bot
-sys_admin_list = "UNICORN_OZ,JosephFiscella"
-
 bot_twitter_account = flodatabot
 
 base_url = https://retweets.floblockchain.com/
+
+dm_sender_name = the FLO community
+
+; Set to 'True' if the bot account should retweet too
+let_bot_account_retweet = False
 
 redirect_successfull_participation = https://retweets.floblockchain.com/thank-you.html
 
 redirect_canceled = https://retweets.floblockchain.com/canceled.html
 
-; Set to 'True' if the bot account should retweet too
-let_bot_account_retweet = False
+; sys admins are allowed to use private commands (get-info) and are receiving status messages from the bot
+sys_admin_list = UNICORN_OZ,JosephFiscella
