--- a/conf.d/main.cfg
+++ b/conf.d/main.cfg
@@ -8,9 +8,12 @@ api_listener_ip = 127.0.0.1
 
 api_listener_port = 17613
 
-app_name = FLO Retweets Bot
+app_name = FLO Retweets
 
 admin_contact_twitter_account = UNICORN_OZ
+
+; this is needed in the disclaimer
+bot_topic = FLO
 
 bot_twitter_account = flodatabot
 
@@ -20,6 +23,13 @@ dm_sender_name = the FLO community
 
 ; Set to 'True' if the bot account should retweet too
 let_bot_account_retweet = False
+
+github_rep_url = https://github.com/floblockchain/flo-retweets
+
+issues_report_to = https://github.com/floblockchain/flo-retweets/issues/new/choose
+
+retweet_sources_description = This app will retweet all tweets sent from the @floblockchain twitter account
+    automatically!
 
 redirect_successfull_participation = https://retweets.floblockchain.com/thank-you.html
 
