--- a/conf.d/main.cfg
+++ b/conf.d/main.cfg
@@ -19,6 +19,8 @@ bot_twitter_account = flodatabot
 
 base_url = https://retweets.floblockchain.com/
 
+default_retweet_level = 3
+
 dm_sender_name = the FLO community
 
 ; Set to 'True' if the bot account should retweet too
@@ -28,12 +30,12 @@ github_rep_url = https://github.com/floblockchain/flo-retweets
 
 issues_report_to = https://github.com/floblockchain/flo-retweets/issues/new/choose
 
-retweet_sources_description = This app will retweet all tweets sent from the @floblockchain twitter account
-    automatically!
+retweet_sources_description = View the rule set for retweet levels: https://forum.flo.cash/t/flo-retweets-bot/292
 
 redirect_successfull_participation = https://retweets.floblockchain.com/thank-you.html
 
 redirect_canceled = https://retweets.floblockchain.com/canceled.html
 
 ; sys admins are allowed to use private commands (get-info) and are receiving status messages from the bot
-sys_admin_list = UNICORN_OZ,JosephFiscella
+;sys_admin_list = UNICORN_OZ,JosephFiscella
+sys_admin_list = UNICORN_OZ
