config update and text change

--- a/conf.d/main.cfg
+++ b/conf.d/main.cfg
@@ -37,5 +37,4 @@ redirect_successfull_participation = https://retweets.floblockchain.com/thank-yo
 redirect_canceled = https://retweets.floblockchain.com/canceled.html
 
 ; sys admins are allowed to use private commands (get-info) and are receiving status messages from the bot
-;sys_admin_list = UNICORN_OZ,JosephFiscella
-sys_admin_list = UNICORN_OZ
+sys_admin_list = UNICORN_OZ,JosephFiscella
