update rule set

--- a/conf.d/rt-level-rule-set.cfg
+++ b/conf.d/rt-level-rule-set.cfg
@@ -9,5 +9,5 @@ conditions: any
 from: FLOcommunity
 
 [RT-LEVEL-3]
-conditions: #gowiththeflo,$flo
-from: UNICORN_OZ,DominikHufnagl,SIRNOTTING,ortega_science,JosephFiscella,BlocktechCEO,shitcoinisseur,EddieD92190900,ranchimallFLO,RavenFlo2,GYotsuba,kofiowusu01,Chrisem404040,channingscox
+conditions: #gowiththeflo,$flo,#floblockchain
+from: flopulse,UNICORN_OZ,DominikHufnagl,SIRNOTTING,ruep3l11,alexandria,Chrisem404040,TheReviken,thanhdungngo,GordonTheGecko1,ortega_science,JosephFiscella,BlocktechCEO,Sean_PLG_BK,shitcoinisseur,EddieD92190900,ranchimallFLO,RavenFlo2,GYotsuba,kofiowusu01,Chrisem404040,channingscox,pdogg147
