--- a/conf.d/rt-level-rule-set.cfg
+++ b/conf.d/rt-level-rule-set.cfg
@@ -10,4 +10,4 @@ from: FLOcommunity
 
 [RT-LEVEL-3]
 conditions: #gowiththeflo,$flo,#floblockchain
-from: UNICORN_OZ,DominikHufnagl,SIRNOTTING,ruep3l11,alexandria,Chrisem404040,TheReviken,thanhdungngo,GordonTheGecko1,ortega_science,JosephFiscella,BlocktechCEO,Sean_PLG_BK,shitcoinisseur,EddieD92190900,ranchimallFLO,RavenFlo2,GYotsuba,kofiowusu01,Chrisem404040,channingscox,pdogg147
+from: UNICORN_OZ,PUBLISH_Inc,OpenIndexProto,DominikHufnagl,SIRNOTTING,ruep3l11,alexandria,Chrisem404040,TheReviken,thanhdungngo,GordonTheGecko1,ortega_science,JosephFiscella,BlocktechCEO,Sean_PLG_BK,shitcoinisseur,EddieD92190900,ranchimallFLO,RavenFlo2,GYotsuba,kofiowusu01,Chrisem404040,channingscox,pdogg147
