--- a/conf.d/rt-level-rule-set.cfg
+++ b/conf.d/rt-level-rule-set.cfg
@@ -1,7 +1,7 @@
 ; Rule set: https://forum.flo.cash/t/flo-retweets-bot/292
 
 [RT-LEVEL-1]
-conditions: any
+conditions: #gowiththeflo,$flo,#floblockchain
 from: FLOblockchain
 
 [RT-LEVEL-2]
