--- a/conf.d/main.cfg
+++ b/conf.d/main.cfg
@@ -19,6 +19,8 @@ bot_twitter_account = flodatabot
 
 base_url = https://retweets.floblockchain.com/
 
+ssh_backup_on_new_user = True
+
 default_retweet_level = 3
 
 dm_sender_name = the FLO community
