--- a/conf.d/main.cfg
+++ b/conf.d/main.cfg
@@ -4,9 +4,9 @@ db_file = flo_retweets_db.json
 
 [SYSTEM]
 ; if the reverse proxy is hosted on a separate system set to '0.0.0.0', if its on the localhost then use '127.0.0.1'
-api_listener_ip = 127.0.0.1
+webserver_listener_ip = 127.0.0.1
 
-api_listener_port = 17613
+webserver_listener_port = 17613
 
 app_name = FLO Retweets
 
