--- a/conf.d/main.cfg
+++ b/conf.d/main.cfg
@@ -40,3 +40,6 @@ redirect_canceled = https://retweets.floblockchain.com/canceled.html
 
 ; sys admins are allowed to use private commands (get-info) and are receiving status messages from the bot
 sys_admin_list = UNICORN_OZ,JosephFiscella
+
+telegram_post_new_tweets_to_chat_room = True
+
