--- a/conf.d/main.cfg
+++ b/conf.d/main.cfg
@@ -41,5 +41,8 @@ redirect_canceled = https://retweets.floblockchain.com/canceled.html
 ; sys admins are allowed to use private commands (get-info) and are receiving status messages from the bot
 sys_admin_list = UNICORN_OZ,JosephFiscella
 
-telegram_post_new_tweets_to_chat_room = True
+telegram_post_new_tweets_to_group = True
 
+telegram_post_new_tweets_to_channel = True
+
+telegram_channel_tag = floretweets
